--- a/src/style/tool.less
+++ b/src/style/tool.less
@@ -139,6 +139,22 @@
   z-index: 100;
 }
 
+.txt-black {
+  color: #333;
+}
+
+.txt-gray {
+  color: #666;
+}
+
+.txt-lightgray {
+  color: #999;
+}
+
+.txt-orange {
+  color: #fd5615;
+}
+
 .flex {
   display: flex;
   align-items: center;
