--- a/static/style.css
+++ b/static/style.css
@@ -309,6 +309,7 @@ html [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+  border: 1px solid #ddd;
   /* 2 */
 }
 
