--- a/src/style/tool.less
+++ b/src/style/tool.less
@@ -190,3 +190,17 @@
 .purple {
   background-color: @purple;
 }
+
+.arrow {
+  position: relative;
+  &:after {
+    content: '';
+    background: url('~assets/common/icon_right_arrow.png') no-repeat;
+    width: 30px;
+    background-size: 100% 100%;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
