--- a/src/style/tool.less
+++ b/src/style/tool.less
@@ -193,10 +193,12 @@
 
 .arrow {
   position: relative;
+  padding-right: 30px;
   &:after {
     content: '';
     background: url('~assets/common/icon_right_arrow.png') no-repeat;
-    width: 30px;
+    width: 20px;
+    height: 40px;
     background-size: 100% 100%;
     position: absolute;
     right: 0;
