--- a/src/style/global.less
+++ b/src/style/global.less
@@ -32,3 +32,19 @@
 .pb {
   padding-bottom: 80px;
 }
+
+.btns {
+  padding: 30px;
+  .btn {
+    height: 90px;
+    font-size: 32px;
+    width: 100%;
+    border: none;
+    color: #fff;
+    border-radius: 45px;
+    background-color: #ccc;
+    &.active {
+      background-color: #ffb4b4;
+    }
+  }
+}
