--- a/static/style.css
+++ b/static/style.css
@@ -139,6 +139,7 @@ input:active,
 input:hover {
   box-shadow: none;
   outline: none;
+  border: none;
 }
 
 button,
@@ -309,7 +310,7 @@ html [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
-  border: 1px solid #ddd;
+  border: none;
   /* 2 */
 }
 
