--- a/src/style/global.less
+++ b/src/style/global.less
@@ -48,7 +48,7 @@ body {
     border-radius: 45px;
     background-color: #ccc;
     &.active {
-      background-color: #ffb4b4;
+      background-color: @color5;
     }
   }
 }
