--- a/src/style/tool.less
+++ b/src/style/tool.less
@@ -1,3 +1,4 @@
+@import './vars.less';
 /*工具类样式*/
 
 .disabled {
@@ -170,7 +171,7 @@
 @yellow: #feae1b;
 @red: #ff4351;
 @purple: #7b72e9;
-@btn-color: #ffb4b4;
+@btn-color: @color5;
 
 .blue {
   background-color: @blue;
