--- a/src/style/vars.less
+++ b/src/style/vars.less
@@ -1,5 +1,5 @@
-@color1: #acd598;
-@color2: #faa0a0;
-@color3: #fff0f0;
+@color1: #c3d79b;
+@color2: #f79e55;
+@color3: #fffaf0;
 @color4: #cdb498;
 @color5: #ffb4b4;
