--- a/src/style/vars.less
+++ b/src/style/vars.less
@@ -1,5 +1,6 @@
 @color1: #c3d79b;
 @color2: #f79e55;
 @color3: #fffaf0;
-@color4: #cdb498;
-@color5: #ffb4b4;
+@color4: #cdb49b;
+@color5: #ffaf69;
+@color6: #d7cdbe;
