--- a/src/style/global.less
+++ b/src/style/global.less
@@ -1,3 +1,5 @@
+@import './vars.less';
+
 body {
   color: #333;
 }
@@ -39,6 +41,7 @@ body {
 
 .btns {
   padding: 30px;
+
   .btn {
     height: 68px;
     font-size: 32px;
@@ -47,6 +50,7 @@ body {
     color: #fff;
     border-radius: 45px;
     background-color: #ccc;
+
     &.active {
       background-color: @color5;
     }
