--- a/src/style/vars.less
+++ b/src/style/vars.less
@@ -1,6 +1,6 @@
-@color1: #acd598;
-@color2: #faa0a0;
-@color3: #fff0f0;
-@color4: #cdb49b;
-@color5: #ffb4b4;
-@color6: #e1c8af;
+@color1: #b4dcd2;
+@color2: #64cbea;
+@color3: #e1f8fa;
+@color4: #9dc8be;
+@color5: #89def8;
+@color6: #b4dcd2;
