--- a/src/style/vars.less
+++ b/src/style/vars.less
@@ -1,6 +1,6 @@
-@color1: #b4dcd2;
-@color2: #64cbea;
-@color3: #e1f8fa;
-@color4: #9dc8be;
-@color5: #89def8;
-@color6: #b4dcd2;
+@color1: #c3d79b;
+@color2: #f79e55;
+@color3: #fffaf0;
+@color4: #cdb49b;
+@color5: #ffaf69;
+@color6: #d7cdbe;
